Implemented: Add Account Page & Home Page.